# zkvm-prover-proxy

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yml  docker-build.yml
docker/: Dockerfile.proverproxy.ubuntu
integration-tests/: Cargo.toml
integration-tests/src/: client.rs  lib.rs
prover-proxy/: Cargo.toml
prover-proxy/src/: errors.rs  interface.rs  lib.rs  proof_db.rs  types.rs  utils.rs  version.rs
prover-proxy/tests/: client.rs  scenario.rs  utils.rs
script/: Cargo.toml
script/src/: lib.rs
