[workspace]
members = ["prover-proxy", "integration-tests", "script"]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["Ethan Yoo"]

[workspace.dependencies]
anyhow = { version = "1.0.86", default-features = false }
bincode = "1.3.3"
clap = { version = "4.5.9", features = ["derive", "env"] }
dotenv = "0.15.0"
hex = "0.4"
once_cell = "1.20.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = { version = "1.0.117", default-features = false }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# alloy
alloy-primitives = { version = "0.8.4", default-features = false, features = [
    "sha3-keccak",
    "serde",
] }

# sp1
sp1-sdk = "4.0.1"

# jsonrpc
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"

## jsonrpc client
jsonrpsee-core = "0.16.2"
jsonrpsee = { version = "0.16.2", features = ["full"] }

# kroma
kroma-zkvm-common = { git = "https://github.com/kroma-network/zkvm-common", branch = "feat/release-v1.0.0" }
kroma-prover-proxy = { path = "prover-proxy" }
