[package]
name = "script"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "script_execute"
path = "bin/execute.rs"


[dependencies]
clap.workspace = true

serde.workspace = true
serde_json.workspace = true
sp1-sdk.workspace = true

kroma-prover-proxy.workspace = true
